ship initialized and has ishit method

--- a/asteroid.html
+++ b/asteroid.html
@@ -6,6 +6,10 @@
     <canvas width="600" height="400" id="canvas" name="canvas"></canvas>
     <script type="application/javascript" src="./jquery-1.9.1.js"></script>
     <script type="application/javascript" src="./helpers.js"></script>
+    <script type="application/javascript" src="./moving_object.js"></script>
+    <script type="application/javascript" src="./asteroid.js"></script>
+    <script type="application/javascript" src="./ship.js"></script>
+    <script type="application/javascript" src="./game.js"></script>
     <script type="application/javascript" src="./asteroids.js"></script>
   </body>
 </html>
